[package]
name = "tvm-frontend"
version = "0.1.0"
license = "Apache-2.0"
description = "Rust frontend support for TVM"
repository = "https://github.com/dmlc/tvm"
homepage = "https://github.com/dmlc/tvm"
readme = "README.md"
keywords = ["rust", "tvm", "nnvm"]
categories = ["api-bindings", "science"]
authors = ["TVM Contributors"]

[lib]
name = "tvm_frontend"
crate-type = ["dylib"]

[dependencies]
tvm-common = { version = "0.1.0", path = "../common/", features = ["frontend"] }
ndarray = "0.12.1"
lazy_static = "1.1.0"
num-traits = "0.2"
error-chain = "0.12.0"

[features]
blas = ["ndarray/blas"]
