[package]
name = "out-of-tree"
version = "0.1.0"
authors = ["Jared Roesch <jroesch@octoml.ai>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "my_pass"
crate-type = ["cdylib"]

[dependencies]
tvm = { version = "0.1", path = "../tvm" }
tvm-sys = { version = "0.1", path = "../tvm-sys" }
anyhow = "*"
