# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "tvm-graph-rt"
version = "0.1.0-alpha"
license = "Apache-2.0"
description = "A static graph executor for TVM."
repository = "https://github.com/apache/tvm"
readme = "README.md"
keywords = ["tvm"]
categories = ["api-bindings", "science"]
authors = ["TVM Contributors"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4"
thiserror = "1"

itertools = "0.8"
lazy_static = "1.4"
ndarray="0.12"
nom = "5.0"
num_cpus = "1.10"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tvm-sys = { version = "0.1.1-alpha", path = "../tvm-sys" }
tvm-macros = { version = "0.1.1-alpha", path = "../tvm-macros" }

[target.'cfg(not(any(target_arch = "wasm32", target_env = "sgx")))'.dependencies]
libloading = "0.5"
