# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "tvm-rt"
version = "0.1.0"
license = "Apache-2.0"
description = "Rust bindings for the TVM runtime API."
repository = "https://github.com/apache/incubator-tvm"
homepage = "https://github.com/apache/incubator-tvm"
readme = "README.md"
keywords = ["rust", "tvm"]
categories = ["api-bindings", "science"]
authors = ["TVM Contributors"]
edition = "2018"

[dependencies]
thiserror = "^1.0"
lazy_static = "1.1"
ndarray = "0.12"
num-traits = "0.2"
tvm-sys = { version = "0.1", path = "../tvm-sys/", features = ["bindings"] }
tvm-macros = { version = "0.1", path = "../macros" }
paste = "0.1"
mashup = "0.1"
once_cell = "^1.3.1"

[dev-dependencies]
anyhow = "^1.0"

[features]
blas = ["ndarray/blas"]
