# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "tvm-rt"
version = "0.1.0-alpha"
license = "Apache-2.0"
description = "Rust bindings for the TVM runtime API."
repository = "https://github.com/apache/tvm"
homepage = "https://github.com/apache/tvm"
readme = "README.md"
keywords = ["rust", "tvm"]
categories = ["api-bindings", "science"]
authors = ["TVM Contributors"]
edition = "2018"

[features]
default = ["dynamic-linking"]
dynamic-linking = ["tvm-sys/dynamic-linking"]
static-linking = ["tvm-sys/static-linking"]
standalone = ["tvm-sys/runtime-only"]
runtime-only = ["tvm-sys/runtime-only"]
blas = ["ndarray/blas"]
# Enabling any of the following features is like setting the value to "ON" in config.cmake.
use-cuda = ["tvm-sys/use-cuda"]
use-opencl = ["tvm-sys/use-opencl"]
use-vulkan = ["tvm-sys/use-vulkan"]
use-metal = ["tvm-sys/use-metal"]
use-rocm = ["tvm-sys/use-rocm"]
use-hexagon-device = ["tvm-sys/use-hexagon-device"]
use-rpc = ["tvm-sys/use-rpc"]
use-threads = ["tvm-sys/use-threads"]
use-llvm = ["tvm-sys/use-llvm"]
use-stackvm-runtime = ["tvm-sys/use-stackvm-runtime"]
use-graph-runtime = ["tvm-sys/use-graph-runtime"]
use-graph-runtime-debug = ["tvm-sys/use-graph-runtime-debug"]
use-openmp = ["tvm-sys/use-openmp"]
use-relay-debug = ["tvm-sys/use-relay-debug"]
use-rtti = ["tvm-sys/use-rtti"]
use-mscv-mt = ["tvm-sys/use-mscv-mt"]
use-micro = ["tvm-sys/use-micro"]
use-install-dev = ["tvm-sys/use-install-dev"]
hide-private-symbols = ["tvm-sys/hide-private-symbols"]
use-fallback-stl-map = ["tvm-sys/use-fallback-stl-map"]
use-ethosn = ["tvm-sys/use-ethosn"]
use-index-default-i64 = ["tvm-sys/use-index-default-i64"]
use-tf-tvmdsoop = ["tvm-sys/use-tf-tvmdsoop"]
use-byodt-posit = ["tvm-sys/use-byodt-posit"]
use-mkl = ["tvm-sys/use-mkl"]
use-mkldnn = ["tvm-sys/use-mkldnn"]
use-dnnl-codegen = ["tvm-sys/use-dnnl-codegen"]
use-cudnn = ["tvm-sys/use-cudnn"]
use-cublas = ["tvm-sys/use-cublas"]
use-thrust = ["tvm-sys/use-thrust"]
use-miopen = ["tvm-sys/use-miopen"]
use-rocblas = ["tvm-sys/use-rocblas"]
use-sort = ["tvm-sys/use-sort"]
use-nnpack = ["tvm-sys/use-nnpack"]
use-random = ["tvm-sys/use-random"]
use-micro-standalone-runtime = ["tvm-sys/use-micro-standalone-runtime"]
use-cpp-rpc = ["tvm-sys/use-cpp-rpc"]
use-tflite = ["tvm-sys/use-tflite"]
use-coreml = ["tvm-sys/use-coreml"]
use-target-onnx = ["tvm-sys/use-target-onnx"]
use-arm-compute-lib = ["tvm-sys/use-arm-compute-lib"]
use-arm-compute-lib-graph-runtime = ["tvm-sys/use-arm-compute-lib-graph-runtime"]
use-tensorrt-codegen = ["tvm-sys/use-tensorrt-codegen"]
use-tensorrt-runtime = ["tvm-sys/use-tensorrt-runtime"]
use-vitis-ai = ["tvm-sys/use-vitis-ai"]
build-static-runtime = ["tvm-sys/build-static-runtime"]

[dependencies]
thiserror = "^1.0"
ndarray = "0.12"
num-traits = "0.2"
tvm-macros = { version = "0.1.1-alpha", path = "../tvm-macros" }
paste = "0.1"
mashup = "0.1"
once_cell = "^1.3.1"
memoffset = "0.5.6"

[dependencies.tvm-sys]
version = "0.1.1-alpha"
default-features = false
path = "../tvm-sys/"

[dev-dependencies]
anyhow = "^1.0"
