# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "tvm-rt"
version = "0.1.0-alpha"
license = "Apache-2.0"
description = "Rust bindings for the TVM runtime API."
repository = "https://github.com/apache/tvm"
homepage = "https://github.com/apache/tvm"
readme = "README.md"
keywords = ["rust", "tvm"]
categories = ["api-bindings", "science"]
authors = ["TVM Contributors"]
edition = "2018"

[features]
default = ["dynamic-linking"]
dynamic-linking = ["tvm-sys/dynamic-linking"]
static-linking = ["tvm-sys/static-linking"]
blas = ["ndarray/blas"]

[dependencies]
thiserror = "^1.0"
ndarray = "0.12"
num-traits = "0.2"
tvm-macros = { version = "0.1.1-alpha", path = "../tvm-macros" }
paste = "0.1"
mashup = "0.1"
once_cell = "^1.3.1"
memoffset = "0.5.6"

[dependencies.tvm-sys]
version = "0.1.1-alpha"
default-features = false
path = "../tvm-sys/"

[dev-dependencies]
anyhow = "^1.0"
