# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "tvm-sys"
version = "0.1.1-alpha"
authors = ["TVM Contributors"]
license = "Apache-2.0"
edition = "2018"
description = "Low level bindings to TVM's cross language API."

[features]
default = ["dynamic-linking"]
static-linking = []
dynamic-linking = []
runtime-only = []
# Enabling any of the following features is like setting the value to "ON" in config.cmake.
use-cuda = []
use-opencl = []
use-vulkan = []
use-metal = []
use-rocm = []
use-hexagon-device = []
use-rpc = []
use-threads = []
use-llvm = []
use-stackvm-runtime = []
use-graph-runtime = []
use-graph-runtime-debug = []
use-openmp = []
use-relay-debug = []
use-rtti = []
use-mscv-mt = []
use-install-dev = []
hide-private-symbols = []
use-fallback-stl-map = []
use-index-default-i64 = []
use-tf-tvmdsoop = []
use-byodt-posit = []
use-mkl = []
use-mkldnn = []
use-dnnl-codegen = []
use-cudnn = []
use-cublas = []
use-thrust = []
use-miopen = []
use-rocblas = []
use-sort = []
use-nnpack = []
use-random = []
use-cpp-rpc = []
use-tflite = []
use-coreml = []
use-target-onnx = []
use-arm-compute-lib = []
use-arm-compute-lib-graph-runtime = []
use-tensorrt-codegen = []
use-tensorrt-runtime = []
use-vitis-ai = []
build-static-runtime = []

[dependencies]
thiserror = "^1.0"
anyhow = "^1.0"
ndarray = "0.12"
enumn = "^0.1"

[build-dependencies]
bindgen = { version="0.57", default-features = false, features = ["runtime"] }
anyhow = "^1.0"
tvm-build = "0.2.4"
